--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,25 @@
         android:theme="@style/Theme.JetpackCompose"
         tools:targetApi="31">
         <activity
-            android:name=".instagramProfileUI.InstagramApp"
+            android:name=".navigation.Navigation"
             android:exported="true"
-            android:label="@string/title_activity_instagram_app"
-            android:theme="@style/Theme.JetpackCompose.NoActionBar">
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/Theme.JetpackCompose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".instagramProfileUI.InstagramApp"
+            android:exported="true"
+            android:label="@string/title_activity_instagram_app"
+            android:theme="@style/Theme.JetpackCompose.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
