--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,24 @@
         android:theme="@style/Theme.JetpackCompose"
         tools:targetApi="31">
         <activity
-            android:name=".compose_destinations.ComposeDestination"
+            android:name=".support_all_screen_sizes.SupportAllScreenSize"
             android:exported="true"
-            android:label="@string/title_activity_compose_destination"
+            android:label="@string/title_activity_support_all_screen_size"
             android:theme="@style/Theme.JetpackCompose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".compose_destinations.ComposeDestination"
+            android:exported="true"
+            android:label="@string/title_activity_compose_destination"
+            android:theme="@style/Theme.JetpackCompose">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -34,12 +43,6 @@
             android:exported="true"
             android:label="@string/title_activity_permission_handling"
             android:theme="@style/Theme.JetpackCompose">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -49,12 +52,6 @@
             android:exported="true"
             android:label="@string/title_activity_multi_select_lazy_column"
             android:theme="@style/Theme.JetpackCompose">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
